@@ -32,10 +32,11 @@ import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.gravitino.Catalog;
 import org.apache.gravitino.EntityStore;
 import org.apache.gravitino.GravitinoEnv;
 import org.apache.gravitino.NameIdentifier;
@@ -67,21 +68,23 @@ import org.apache.gravitino.rel.expressions.transforms.Transform;
 import org.apache.gravitino.rel.indexes.Index;
 import org.apache.gravitino.storage.IdGenerator;
 import org.apache.gravitino.utils.ExceptionMessages;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /** Operations for interacting with a generic lakehouse catalog in Apache Gravitino. */
 public class GenericCatalogOperations implements CatalogOperations, SupportsSchemas, TableCatalog {
 
-  private static final String SLASH = "/";
+  private static final Logger LOG = LoggerFactory.getLogger(GenericCatalogOperations.class);
 
   private final ManagedSchemaOperations schemaOps;
 
   private final Map<String, Supplier<ManagedTableOperations>> tableOpsCache;
 
-  private Optional<String> catalogLocation;
+  private volatile TableLocationProvider tableLocationProvider;
 
-  private Map<String, String> catalogProperties = Map.of();
+  private volatile Map<String, String> catalogProperties = Map.of();
 
-  private HasPropertyMetadata propertiesMetadata;
+  private final AtomicBoolean closed = new AtomicBoolean();
 
   private final Cache<NameIdentifier, String> tableFormatCache;
 
@@ -129,22 +132,35 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
   public void initialize(
       Map<String, String> conf, CatalogInfo info, HasPropertyMetadata propertiesMetadata)
       throws RuntimeException {
-    this.catalogProperties = conf == null ? Map.of() : Maps.newHashMap(conf);
-    String location =
+    // A defensive copy that tolerates null values, for the same reason as
+    // TableLocationContext.Builder#withTableProperties: nothing upstream rejects a catalog
+    // property whose value is null, and ImmutableMap.copyOf would turn one into a
+    // NullPointerException. Here it would fail the creation of the whole catalog rather than a
+    // single request.
+    this.catalogProperties =
+        conf == null ? Map.of() : Collections.unmodifiableMap(Maps.newHashMap(conf));
+
+    String providerName =
         (String)
             propertiesMetadata
                 .catalogPropertiesMetadata()
-                .getOrDefault(conf, Catalog.PROPERTY_LOCATION);
-    this.catalogLocation =
-        StringUtils.isNotBlank(location)
-            ? Optional.of(location).map(this::ensureTrailingSlash)
-            : Optional.empty();
-    this.propertiesMetadata = propertiesMetadata;
+                .getOrDefault(conf, GenericCatalogPropertiesMetadata.TABLE_LOCATION_PROVIDER);
+    this.tableLocationProvider =
+        TableLocationProviderFactory.create(providerName, catalogProperties);
   }
 
   @Override
-  public void close() {
+  public void close() throws IOException {
     tableFormatCache.cleanUp();
+
+    // A flag rather than clearing the field: closing the catalog twice must not close the provider
+    // twice, but a drop in flight while the catalog shuts down must not meet a null provider
+    // either. The contract asks a provider to tolerate close after a failed initialize, not
+    // repeated closes from its owner.
+    TableLocationProvider provider = tableLocationProvider;
+    if (provider != null && closed.compareAndSet(false, true)) {
+      provider.close();
+    }
   }
 
   @Override
@@ -175,6 +191,21 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
     return schemaOps.alterSchema(ident, changes);
   }
 
+  /**
+   * Drops a schema, dropping every table it contains first when cascade is set.
+   *
+   * <p>The cascaded tables go through {@link #dropTable(NameIdentifier)} rather than straight to
+   * the table operations, so that the location of each of them is unprovisioned and its cached
+   * format invalidated. A table failing to drop aborts the cascade: the tables handled so far are
+   * gone, the remaining ones and the schema itself are untouched, and the call can safely be
+   * retried. A {@link TableLocationProvider} failing to unprovision a location does not abort it,
+   * because the table it belongs to is already gone.
+   *
+   * @param ident the identifier of the schema to drop
+   * @param cascade whether to drop the tables contained in the schema
+   * @return true if the schema was dropped, false if it did not exist
+   * @throws NonEmptySchemaException if the schema contains tables and cascade is not set
+   */
   @Override
   public boolean dropSchema(NameIdentifier ident, boolean cascade) throws NonEmptySchemaException {
     Namespace tableNs =
@@ -192,9 +223,14 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
           "Schema %s is not empty, cannot drop it without cascade", ident);
     }
 
-    // Drop all tables under the schema first if cascade is true.
+    // Drop all tables under the schema first if cascade is true. This goes through the same path
+    // as the catalog level dropTable, so that the location of each table is unprovisioned and its
+    // cached format invalidated. The schema is resolved once for the whole cascade rather than
+    // once per table: every table here has the same parent, and the provider may not ask for it at
+    // all.
+    Schema cascadedSchema = loadSchema(ident);
     for (NameIdentifier tableIdent : tableIdents) {
-      tableOps(tableIdent).dropTable(tableIdent);
+      dropOrPurgeTable(tableIdent, false /* purge */, cascadedSchema);
     }
 
     return schemaOps.dropSchema(ident, cascade);
@@ -233,25 +269,38 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
       Index[] indexes)
       throws NoSuchSchemaException, TableAlreadyExistsException {
     Schema schema = loadSchema(NameIdentifier.of(ident.namespace().levels()));
-    String tableLocation = calculateTableLocation(schema, ident, properties);
 
     String format = properties.getOrDefault(Table.PROPERTY_TABLE_FORMAT, null);
     Preconditions.checkArgument(
         format != null, "Table format must be specified in table properties");
     format = format.toLowerCase(Locale.ROOT);
 
-    Map<String, String> newProperties = Maps.newHashMap(properties);
-    newProperties.put(Table.PROPERTY_LOCATION, tableLocation);
-    newProperties.put(Table.PROPERTY_TABLE_FORMAT, format);
-
     // Get the table operations for the specified table format.
     Supplier<ManagedTableOperations> tableOpsSupplier = tableOpsCache.get(format);
     Preconditions.checkArgument(tableOpsSupplier != null, "Unsupported table format: %s", format);
     ManagedTableOperations tableOps = configureTableOps(tableOpsSupplier.get());
 
+    // The provider is consulted only once the request is known to be one this catalog can serve,
+    // and only when the catalog is the one choosing the location. A provider that allocates real
+    // storage has no compensating callback, so every check that can be made before asking it for a
+    // location is one reservation it does not have to reclaim later.
+    String suppliedLocation = properties.get(Table.PROPERTY_LOCATION);
+    boolean provisioned = StringUtils.isBlank(suppliedLocation);
+    String tableLocation =
+        provisioned
+            ? provisionTableLocation(ident, properties, schema)
+            : DefaultTableLocationProvider.ensureTrailingSlash(suppliedLocation);
+
+    Map<String, String> newProperties = Maps.newHashMap(properties);
+    newProperties.put(Table.PROPERTY_LOCATION, tableLocation);
+    newProperties.put(Table.PROPERTY_TABLE_FORMAT, format);
+
     Table createdTable =
         tableOps.createTable(
             ident, columns, comment, newProperties, partitions, distribution, sortOrders, indexes);
+    if (provisioned) {
+      releaseLocationIfUnused(ident, schema, newProperties, tableLocation, createdTable);
+    }
     // Cache the table format for future use.
     tableFormatCache.put(ident, format);
     return createdTable;
@@ -273,67 +322,138 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
 
   @Override
   public boolean purgeTable(NameIdentifier ident) {
-    boolean purged = tableOps(ident).purgeTable(ident);
-    tableFormatCache.invalidate(ident);
-    return purged;
+    return dropOrPurgeTable(ident, true /* purge */);
   }
 
   @Override
   public boolean dropTable(NameIdentifier ident) throws UnsupportedOperationException {
-    boolean dropped = tableOps(ident).dropTable(ident);
+    return dropOrPurgeTable(ident, false /* purge */);
+  }
+
+  /**
+   * Returns the cache mapping a table to its format, so that tests can assert it is kept in step
+   * with the tables that exist.
+   *
+   * @return the table format cache
+   */
+  @VisibleForTesting
+  Cache<NameIdentifier, String> tableFormatCache() {
+    return tableFormatCache;
+  }
+
+  /**
+   * Drops or purges a table, and hands its location back to the {@link TableLocationProvider}
+   * afterwards.
+   *
+   * <p>The table properties are read before the removal, because they carry the location the
+   * provider has to hand back, and the unprovisioning itself happens after the removal so that a
+   * provider never reclaims the storage of a table that is still there. A provider failing to
+   * unprovision is logged at WARN rather than propagated: the table is already gone at that point,
+   * so failing the request would report a drop that did in fact happen as unsuccessful and invite a
+   * retry that cannot undo anything.
+   *
+   * @param ident the identifier of the table to drop
+   * @param purge whether to purge the table instead of dropping it
+   * @return true if the table was dropped, false if it did not exist
+   */
+  private boolean dropOrPurgeTable(NameIdentifier ident, boolean purge) {
+    return dropOrPurgeTable(
+        ident, purge, loadSchema(NameIdentifier.of(ident.namespace().levels())));
+  }
+
+  /**
+   * Drops or purges a table, resolving its parent schema through the given supplier.
+   *
+   * <p>The schema is passed in rather than loaded here so that a cascading schema drop, where every
+   * table shares one parent, loads it once instead of once per table. It stays eager: the context
+   * is built in full before the table is removed, so that a store read failing fails the request
+   * while the table is still there, rather than from inside a callback where it could only be
+   * reported as a provider failure it is not.
+   *
+   * @param ident the identifier of the table to drop
+   * @param purge whether to purge the table instead of dropping it
+   * @param schema the table's parent schema
+   * @return true if the table was dropped, false if it did not exist
+   */
+  private boolean dropOrPurgeTable(NameIdentifier ident, boolean purge, Schema schema) {
+    Map<String, String> tableProperties;
+    try {
+      tableProperties = store.get(ident, TABLE, TableEntity.class).properties();
+    } catch (NoSuchEntityException e) {
+      return false;
+    } catch (IOException e) {
+      throw new RuntimeException(
+          String.format("Failed to load table %s before dropping it", ident), e);
+    }
+
+    // Built entirely before the drop, so that a store read failing here fails the request while
+    // the table is still there, rather than after it is gone where it could only be reported as a
+    // provider failure it is not.
+    TableLocationContext context =
+        TableLocationContext.builder()
+            .withTableIdentifier(ident)
+            .withTableProperties(tableProperties)
+            .withSchema(schema)
+            .build();
+
+    // The properties just read are handed on rather than left to be read again: resolving the
+    // table format is a second store read for the very same entity whenever the format cache is
+    // cold, which for a drop it usually is.
+    ManagedTableOperations tableOps = tableOps(ident, tableProperties);
+    boolean dropped = purge ? tableOps.purgeTable(ident) : tableOps.dropTable(ident);
     tableFormatCache.invalidate(ident);
+
+    if (dropped && !context.isExternal()) {
+      TableLocationProvider provider = tableLocationProvider;
+      try {
+        provider.unprovisionTableLocation(context);
+      } catch (Exception e) {
+        LOG.warn(
+            "Table {} was already {}, but table location provider '{}' failed to unprovision its "
+                + "location '{}'. The storage may be leaked and needs to be reclaimed manually.",
+            ident,
+            purge ? "purged" : "dropped",
+            provider.name(),
+            context.tableProperties().get(Table.PROPERTY_LOCATION),
+            e);
+      }
+    } else if (dropped) {
+      LOG.debug(
+          "Table {} is external, so its location '{}' is left alone rather than handed back to "
+              + "table location provider '{}': the catalog does not own that data.",
+          ident,
+          context.tableProperties().get(Table.PROPERTY_LOCATION),
+          tableLocationProvider.name());
+    }
+
     return dropped;
   }
 
-  private String calculateTableLocation(
-      Schema schema, NameIdentifier tableIdent, Map<String, String> tableProperties) {
-    String tableLocation =
-        (String)
-            propertiesMetadata
-                .tablePropertiesMetadata()
-                .getOrDefault(tableProperties, Table.PROPERTY_LOCATION);
-    if (StringUtils.isNotBlank(tableLocation)) {
-      return ensureTrailingSlash(tableLocation);
-    }
-
-    String schemaLocation =
-        schema.properties() == null ? null : schema.properties().get(Schema.PROPERTY_LOCATION);
-
-    // If we do not set location in table properties, and schema location is set, use schema
-    // location as the base path.
-    if (StringUtils.isNotBlank(schemaLocation)) {
-      return ensureTrailingSlash(schemaLocation) + tableIdent.name() + SLASH;
-    }
-
-    // If the schema location is not set, use catalog lakehouse dir as the base path. Or else, throw
-    // an exception.
-    if (catalogLocation.isEmpty()) {
-      throw new IllegalArgumentException(
-          "'location' property is neither set in table properties "
-              + "nor in schema properties, and no location is set in catalog properties either. "
-              + "Please set the 'location' in either of them to create the table "
-              + tableIdent);
-    }
-
-    return ensureTrailingSlash(catalogLocation.get())
-        + tableIdent.namespace().level(2)
-        + SLASH
-        + tableIdent.name()
-        + SLASH;
-  }
-
-  private String ensureTrailingSlash(String path) {
-    return path.endsWith(SLASH) ? path : path + SLASH;
-  }
-
   private ManagedTableOperations tableOps(NameIdentifier tableIdent) {
+    return tableOps(tableIdent, null);
+  }
+
+  /**
+   * Returns the table operations for the format of the given table.
+   *
+   * @param tableIdent the identifier of the table
+   * @param knownProperties the table's properties if the caller has already read them, null to have
+   *     them read from the store when the format cache misses. Passing them in only saves a store
+   *     read; it does not let a caller override the format of a table that is already cached.
+   * @return the table operations for the table's format
+   */
+  private ManagedTableOperations tableOps(
+      NameIdentifier tableIdent, @Nullable Map<String, String> knownProperties) {
     try {
       String tableFormat =
           tableFormatCache.get(
               tableIdent,
               () -> {
-                TableEntity table = store.get(tableIdent, TABLE, TableEntity.class);
-                String format = table.properties().getOrDefault(Table.PROPERTY_TABLE_FORMAT, null);
+                Map<String, String> properties =
+                    knownProperties != null
+                        ? knownProperties
+                        : store.get(tableIdent, TABLE, TableEntity.class).properties();
+                String format = properties.getOrDefault(Table.PROPERTY_TABLE_FORMAT, null);
                 Preconditions.checkArgument(
                     format != null, "Table format for %s is null, this is unexpected", tableIdent);
 
@@ -366,5 +486,150 @@ public class GenericCatalogOperations implements CatalogOperations, SupportsSche
     }
 
     return ops;
+  }
+
+  /**
+   * Asks the {@link TableLocationProvider} where the table being created should live.
+   *
+   * <p>Called only when the request does not carry a location of its own. A caller that supplies a
+   * location has already decided where the data goes, and in this catalog it usually does so
+   * because the data is already there: an external Delta table, or a Lance registration, both of
+   * which point at a dataset that exists. Handing such a request to a provider that allocates
+   * storage would do two wrong things at once -- repoint the table at a freshly allocated empty
+   * path, leaving the caller's data orphaned while the creation still reports success, and leave
+   * behind an allocation that is never written to and never handed back.
+   *
+   * <p>The catalog cannot tell those requests apart from a caller merely overriding placement, and
+   * a rule each provider has to re-derive for itself is a rule most of them will get wrong. So the
+   * provider is consulted only when the catalog is the one choosing, which is also what this
+   * catalog has always done with a supplied location. A deployment that wants allocation to be
+   * mandatory has to reject a caller-supplied location before it reaches the catalog.
+   *
+   * @param ident the identifier of the table being created
+   * @param properties the table properties the caller supplied
+   * @param schema the schema the table is created in
+   * @return the provisioned location, never blank
+   */
+  private String provisionTableLocation(
+      NameIdentifier ident, Map<String, String> properties, Schema schema) {
+    TableLocationProvider provider = tableLocationProvider;
+    String location =
+        provider.provisionTableLocation(
+            TableLocationContext.builder()
+                .withTableIdentifier(ident)
+                .withTableProperties(properties)
+                .withSchema(schema)
+                .build());
+
+    // Only blankness is checked. The shape of the path belongs to the provider: nothing downstream
+    // appends to the location, and the value is stored verbatim so that a provider unprovisioning
+    // it later sees exactly the string it returned.
+    Preconditions.checkArgument(
+        StringUtils.isNotBlank(location),
+        "Table location provider '%s' returned a null or blank location for table %s",
+        provider.name(),
+        ident);
+
+    return location;
+  }
+
+  /**
+   * Hands back a location that was provisioned for this creation and that the created table does
+   * not point at.
+   *
+   * <p>A format may decline the location it was given and still report success. Lance's {@code
+   * EXIST_OK} creation mode returns the table that already exists, at the location that table
+   * already had, and a client retrying a create is the ordinary way to reach that path. Without
+   * this, every such call would leak one allocation with nothing in the logs to show for it.
+   *
+   * <p>This is {@link TableLocationProvider#releaseUnusedLocation(TableLocationContext)} and not
+   * {@link TableLocationProvider#unprovisionTableLocation(TableLocationContext)}, even though for
+   * the built-in provider the two do the same nothing. The table here is alive and is about to be
+   * returned to the caller; a provider that reclaims by table identity rather than by path would
+   * read the drop callback literally and delete the registration of a table that exists. Releasing
+   * defaults to doing nothing for exactly that reason, so a provider opts in to it knowingly.
+   *
+   * <p>Releasing is safe here in a way it is not on the creation failure path: nothing can have
+   * been written to a location the created table does not point at. A failure to release is logged
+   * and otherwise ignored, as it is on drop -- the table was created, and reporting the creation as
+   * failed would be the worse answer.
+   *
+   * <p>The two locations are compared with a trailing slash added to both, since that is the one
+   * rewrite this catalog performs itself. A format that rewrites the location further -- collapsing
+   * a duplicated separator, or normalizing a URI scheme -- is indistinguishable from here from a
+   * format that declined the location outright, which the contract warns providers about.
+   *
+   * @param ident the identifier of the table that was created
+   * @param schema the schema the table was created in
+   * @param properties the properties the format was given, carrying the provisioned location
+   * @param provisionedLocation the location the provider handed out
+   * @param createdTable the table the format returned, which may be null
+   */
+  private void releaseLocationIfUnused(
+      NameIdentifier ident,
+      Schema schema,
+      Map<String, String> properties,
+      String provisionedLocation,
+      Table createdTable) {
+    // Neither built-in delegator returns null, but a third-party one that did would otherwise
+    // fail a creation that has already succeeded, and only on this path: the same delegator would
+    // serve a request that carried its own location without complaint. An asymmetry like that is
+    // far harder to diagnose than the leaked location that returning here may cost.
+    if (createdTable == null) {
+      return;
+    }
+
+    Map<String, String> createdProperties = createdTable.properties();
+    String storedLocation =
+        createdProperties == null ? null : createdProperties.get(Table.PROPERTY_LOCATION);
+
+    // Only a location that is visibly different is released. A format reporting no location at all
+    // may still be using the one it was handed, and leaking it is the safer reading of that.
+    if (StringUtils.isBlank(storedLocation)
+        || DefaultTableLocationProvider.ensureTrailingSlash(provisionedLocation)
+            .equals(DefaultTableLocationProvider.ensureTrailingSlash(storedLocation))) {
+      return;
+    }
+
+    TableLocationProvider provider = tableLocationProvider;
+    // The exact class, not instanceof: the built-in provider composes its location from
+    // configuration and registers it nowhere, so nothing was allocated and nothing can leak. A
+    // subclass of it may well allocate, and silencing that one would be the same lie in the other
+    // direction. Warning unconditionally would be the more common lie, since a client retrying a
+    // create reaches this path routinely on a default deployment.
+    if (provider.getClass() == DefaultTableLocationProvider.class) {
+      LOG.debug(
+          "Table {} was created at '{}' rather than at the composed location '{}'. The composed "
+              + "location was never allocated anywhere, so there is nothing to release.",
+          ident,
+          storedLocation,
+          provisionedLocation);
+    } else {
+      LOG.warn(
+          "Table {} was created at '{}' rather than at the provisioned location '{}'. Asking "
+              + "table location provider '{}' to release the unused location; a provider that "
+              + "does not implement the release callback leaves it allocated.",
+          ident,
+          storedLocation,
+          provisionedLocation,
+          provider.name());
+    }
+
+    try {
+      provider.releaseUnusedLocation(
+          TableLocationContext.builder()
+              .withTableIdentifier(ident)
+              .withTableProperties(properties)
+              .withSchema(schema)
+              .build());
+    } catch (Exception e) {
+      LOG.warn(
+          "Table location provider '{}' failed to release the unused location '{}' provisioned for "
+              + "table {}. The storage may be leaked and needs to be reclaimed manually.",
+          provider.name(),
+          provisionedLocation,
+          ident,
+          e);
+    }
   }
 }
